--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -26,6 +26,23 @@
         src: "db-init/"
         dest: "{{ app_directory_prefix }}/db-init/"
 
+- name: create env file
+  copy:
+      content: ""
+      dest: "{{ app_directory_prefix }}/.env"
+      force: no
+      group: sys
+      owner: root
+      mode: 0700
+
+-   name: populate env-variables
+    lineinfile:
+        dest: "{{ app_directory_prefix }}/.env"
+        state: present
+        regexp: "^{{ item.key }}="
+        line: "{{ item.key }}={{ item.value}}"
+    with_items: "{{ os_environment }}"
+
 -   name: Create and start services
     community.docker.docker_compose:
         project_src: "{{ app_directory_prefix }}"
